fix: limiting the width of overflow-x by clip

--- a/src/components/Cell/index.css
+++ b/src/components/Cell/index.css
@@ -15,7 +15,6 @@
 .top:before,
 .top:after {
   position: absolute;
-  visibility: hidden;
   opacity: 0;
   z-index: 999;
   transition: visibility 0.3s, transform 0.3s;
